@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022 Oracle and/or its affiliates.
+ * Copyright (c) 2022, 2023 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,6 +20,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import io.helidon.builder.test.testsubjects.ComplexCaseImpl;
 import io.helidon.builder.test.testsubjects.MyConfigBean;
@@ -39,7 +40,7 @@ class ComplexCaseTest {
         ComplexCaseImpl val = ComplexCaseImpl.builder()
                 .name("name")
                 .mapOfKeyToConfigBeans(mapWithNull)
-                .setOfLists(Collections.singleton(Collections.singletonList(null)))
+                .setOfLists(Set.of(Collections.singletonList(null)))
                 .classType(Object.class)
                 .build();
         assertThat(val.toString(),
